[IMP]修正代码高亮，添加代码高亮主题

--- a/src/content/2018-12-16.md
+++ b/src/content/2018-12-16.md
@@ -24,13 +24,13 @@ tags:
 
 `shouldComponentUpdate` 是 React 性能优化中重要的一环，它可以帮你决定哪些情况下组件是不需要被渲染的。具体的代码结构如下：
 
-{% codeblock lang:javascript%}
+```javascript
 shouldComponentUpdate(nextProps,nextState){
   if(nextState.Number == this.state.Number){
     return false
   }
 }
-{% endcodeblock %}
+```
 
 `shouldComponentUpdate` 在下一次渲染前传入下一个参数与状态，并返回一个 `Boolean` 值，用以决定是否要进行下一次渲染。如果 `Boolean` 值为 `false`，则不进行下一次的渲染。
 
@@ -56,7 +56,7 @@ trace 是 `Mobx` 提供的专门用于性能优化的函数。可以先利用 `i
 
 通过分析 `trace` 提供的信息，我们可以看到原代码中这一部分代码在频繁的触发重渲染
 
-{% codeblock lang:javascript%}
+```javascript
 loadIssues(page = 0, size = 10) {
     this.setLoading(true);
     const { orderField = '', orderType = '' } = this.order;
@@ -82,7 +82,7 @@ loadIssues(page = 0, size = 10) {
     return Promise.resolve(res);
   });
 }
-{% endcodeblock %}
+```
 
 这一段代码是用于刷新的逻辑，代码本身并不是 `@action`，但是在代码中频繁的调用了 `@action`。这导致 `Mobx` 中 `@observable` 属性频繁变动，从而造成了页面的多次渲染。解决方法是，将整个代码段变成一个 `@action` 函数，将其从 `@action` 的集合变成单个 `@action`，这样就可以显著减少 `@observable` 属性的变动次数，以达到减少渲染次数的目标。
 
