--- a/src/content/2018-12-16.md
+++ b/src/content/2018-12-16.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: React 重复渲染分析及优化
-image: img/callum-shaw-555357-unsplash.jpg
+image: img/2018-12-16.jpg
 author: Helve
 date: 2018-12-16T10:00:00.000Z
 tags:
