[IMP]将facebook与twitter改为github和zhihu，将Tag改到首页上

--- a/src/content/2018-04-21.md
+++ b/src/content/2018-04-21.md
@@ -2,7 +2,7 @@
 layout: post
 title: JavaScript 执行机制解析
 author: Helve
-tags: [前端]
+tags: [FrontEnd, JavaScript]
 image: img/2018-04-21.jpg
 date: "2018-04-21T20:33:24.121Z"
 draft: false
