--- a/src/content/2018-08-08.md
+++ b/src/content/2018-08-08.md
@@ -2,7 +2,7 @@
 layout: post
 title: this、apply、call、bind
 author: Helve
-tags: [前端]
+tags: [FrontEnd, JavaScript]
 image: img/2018-08-08.jpg
 date: "2018-08-08T19:00:35.121Z"
 draft: false
