--- a/src/content/2018-08-15.md
+++ b/src/content/2018-08-15.md
@@ -2,7 +2,7 @@
 layout: post
 title: "浅谈浏览器常用优化方法"
 author: Helve
-tags: ["前端"]
+tags: [FrontEnd]
 image: img/2018-08-15.jpg
 date: "2018-08-15T15:11:55.000Z"
 draft: false
