--- a/src/content/2018-07-29.md
+++ b/src/content/2018-07-29.md
@@ -2,7 +2,7 @@
 layout: post
 title: JavaScript 异步编程迷思
 author: Helve
-tags: [前端]
+tags: [FrontEnd, JavaScript]
 image: img/2018-07-29.jpg
 date: "2018-07-29T19:00:35.121Z"
 draft: false
