--- a/src/content/2018-08-12.md
+++ b/src/content/2018-08-12.md
@@ -2,7 +2,7 @@
 layout: post
 title: JavaScript 闭包
 author: Helve
-tags: [前端]
+tags: [FrontEnd, JavaScript]
 image: img/2018-08-12.jpg
 date: "2018-08-12T12:14:33.121Z"
 draft: false
