--- a/src/content/2018-08-13.md
+++ b/src/content/2018-08-13.md
@@ -2,7 +2,7 @@
 layout: post
 title:  DOM 事件详解
 author: Helve
-tags: ["前端"]
+tags: [FrontEnd]
 image: img/2018-08-13.jpg
 date: "2018-08-13T09:38:42.121Z"
 draft: false
