--- a/src/content/2018-08-14.md
+++ b/src/content/2018-08-14.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Cookie、Session、LocalStorage、SessionStorage 详解"
 author: Helve
-tags: ["前端"]
+tags: [FrontEnd]
 image: img/2018-08-14.jpg
 date: "2018-08-14T23:46:37.121Z"
 draft: false
