--- a/src/content/2019-02-17.md
+++ b/src/content/2019-02-17.md
@@ -2,7 +2,7 @@
 title: "React diff 算法"
 author: Helve
 tags: [React]
-image: img/2019-02-17.jpg
+image: /asset/2019-02-17.jpg
 date: "2019-02-17T00:00:00.000Z"
 draft: false
 ---
