[IMP]搬迁博文图片至asset，添加图片相对路径解析

--- a/src/content/2018-07-29.md
+++ b/src/content/2018-07-29.md
@@ -3,7 +3,7 @@ layout: post
 title: JavaScript 异步编程迷思
 author: Helve
 tags: [FrontEnd, JavaScript]
-image: img/2018-07-29.jpg
+image: /assets/2018-07-29.jpg
 date: "2018-07-29T19:00:35.121Z"
 draft: false
 ---
