--- a/src/content/2018-08-12.md
+++ b/src/content/2018-08-12.md
@@ -3,7 +3,7 @@ layout: post
 title: JavaScript 闭包
 author: Helve
 tags: [FrontEnd, JavaScript]
-image: img/2018-08-12.jpg
+image: /assets/2018-08-12.jpg
 date: "2018-08-12T12:14:33.121Z"
 draft: false
 ---
