--- a/src/content/2018-08-15.md
+++ b/src/content/2018-08-15.md
@@ -3,7 +3,7 @@ layout: post
 title: "浅谈浏览器常用优化方法"
 author: Helve
 tags: [FrontEnd]
-image: img/2018-08-15.jpg
+image: /assets/2018-08-15.jpg
 date: "2018-08-15T15:11:55.000Z"
 draft: false
 ---
