--- a/src/content/2019-03-29.md
+++ b/src/content/2019-03-29.md
@@ -1,7 +1,7 @@
 ---
 title: 活跃冲刺 - 看板性能优化随笔
 date: '2019-03-29T10:00:00.000Z'
-image: /src/content/testimg1.jpg
+image: /asset/2019-03-29.jpg
 author: Helve
 tags:
   - React
