--- a/src/content/2018-04-21.md
+++ b/src/content/2018-04-21.md
@@ -2,7 +2,7 @@
 layout: post
 title: JavaScript 执行机制解析
 date: '2018-04-21T20:33:24.121Z'
-image: img/2018-04-21.jpg
+image: /assets/2018-04-21.jpg
 author: Helve
 tags:
   - FrontEnd
