--- a/src/content/2018-06-02.md
+++ b/src/content/2018-06-02.md
@@ -3,7 +3,7 @@ layout: post
 title: Node.js 事件循环原理总结
 author: Helve
 tags: [FrontEnd, JavaScript]
-image: img/2018-06-02.jpg
+image: /assets/2018-06-02.jpg
 date: "2018-06-02T20:33:24.121Z"
 draft: false
 ---
