--- a/src/content/2018-08-08.md
+++ b/src/content/2018-08-08.md
@@ -3,7 +3,7 @@ layout: post
 title: this、apply、call、bind
 author: Helve
 tags: [FrontEnd, JavaScript]
-image: img/2018-08-08.jpg
+image: /assets/2018-08-08.jpg
 date: "2018-08-08T19:00:35.121Z"
 draft: false
 ---
