--- a/src/content/2018-08-11.md
+++ b/src/content/2018-08-11.md
@@ -3,7 +3,7 @@ layout: post
 title: 类，原型链与 Class
 author: Helve
 tags: [FrontEnd, JavaScript]
-image: img/2018-08-11.jpg
+image: /assets/2018-08-11.jpg
 date: "2018-08-11T19:00:35.121Z"
 draft: false
 ---
