--- a/src/content/2018-08-13.md
+++ b/src/content/2018-08-13.md
@@ -3,7 +3,7 @@ layout: post
 title:  DOM 事件详解
 author: Helve
 tags: [FrontEnd]
-image: img/2018-08-13.jpg
+image: /assets/2018-08-13.jpg
 date: "2018-08-13T09:38:42.121Z"
 draft: false
 ---
