--- a/src/content/2018-12-16.md
+++ b/src/content/2018-12-16.md
@@ -3,7 +3,7 @@ layout: post
 title: React 重复渲染分析及优化
 author: Helve
 tags: [React]
-image: img/2018-12-16.jpg
+image: /assets/2018-12-16.jpg
 date: 2018-12-16T10:00:00.000Z
 ---
 
