--- a/src/content/2019-03-29.md
+++ b/src/content/2019-03-29.md
@@ -3,7 +3,7 @@ title: 活跃冲刺 - 看板性能优化随笔
 date: '2019-03-29T10:00:00.000Z'
 tags:
   - React
-image: /asset/javascript_isnpmf.png
+image: /asset/2019-03-29.jpg
 author: Helve
 ---
 
