--- a/src/content/2019-04-26-测试文件2.md
+++ b/src/content/2019-04-26-测试文件2.md
@@ -3,7 +3,7 @@ layout: post
 title: 测试文件2
 date: 2019-04-26T06:13:25.540Z
 author: Helve
-tags: JavaScript
+tags: [JavaScript]
 image: img/writing.jpg
 ---
 我试试现在会不会报错
