--- a/src/content/2019-08-11-leetcode-数组部分总结分析.md
+++ b/src/content/2019-08-11-leetcode-数组部分总结分析.md
@@ -9,4 +9,88 @@ tags:
 image: /asset/2018-08-10.jpg
 ---
 # 概览
-先添加几个内容占个坑
+最近正在刷 `leetcode`，希望针对其中不同种类的题目进行一下解法总结，因此书写了这篇文章供复习使用。
+该部分总结为 `leetcode` 中数组的题目，选取了其中前 200 道题目左右进行总结，随后会根据难易程度进行相应排列
+# easy
+
+* \#1 两数之和
+* \#26 删除排序数组中的重复项
+* \#27 移除元素
+* \#35 搜索插入位置
+* \#53 最大子序和
+* \#66 加一
+* \#88 合并两个有序数组
+* \#118 杨辉三角
+* \#119 杨辉三角II
+* \#121 买卖股票的最佳时机
+* \#122 买卖股票的最佳时机II
+* \#167 两数之和 II - 输入有序数组
+* \#169 求众数
+* \#189 旋转数组
+* \#217 存在重复元素
+* \#661 图片平滑器
+* \#665 非递减序列
+* \#674 最长连续递增序列
+* \#832 翻转图像
+
+## 两数之和（Two Sum）
+
+两数之和是一道极其经典且简单的题目，以下介绍三种方法
+
+1. 暴力法
+
+   最简单的解法，遍历每个元素 `x`，并查找是否存在一个与 `target-x` 相等的元素
+   
+   ``` javascript
+        // 暴力 AC
+        function twoSum(nums, target) {
+            for (let i = 0; i < nums.length; i++) {
+                for (let j = i + 1; j < nums.length; j++) {
+                    if (nums[j] == target - nums[i]) {
+                        return [i, j];
+                    }
+                }
+            }
+            throw Error("No two sum solution");
+        }
+   ```
+   **复杂度分析**
+    * 时间复杂度：O（N^2）
+    * 空间复杂度：O（1）
+   
+2. 两遍哈希表
+
+    实际上这个问题能够被继续精简，通过空间换时间的方式降低时间复杂度
+    
+    本问题中，我们需要将 `index` 和 `elemenet` 一一对应起来，根据 `sum - target1 = target2` 这个准则，利用 `target1` 去哈希表中寻找 `target2`。
+
+   ``` javascript
+        // 使用了两次迭代
+        var sum = function twoSum(nums, target) {
+            const map = new Map();
+            // 第一次迭代中，将数组的每个值 set 到 map 中
+            for (let i = 0; i < nums.length; i++) {
+                map.set(nums[i], i);
+            }
+            // 第二次迭代中，寻找 hashmap 中是否存在 target - nums[i]
+            for (let i = 0; i < nums.length; i++) {
+                let complement = target - nums[i];
+                if (map.has(complement) && map.get(complement) != i) {
+                    return [i, map.get(complement)];
+                }
+            }
+            throw new IllegalArgumentException("No two sum solution");
+        }
+   ```
+   
+   **复杂度分析**
+    * 时间复杂度：O（N）
+    * 空间复杂度：O（N）
+
+3. 一遍哈希表
+
+# medium
+
+# hard
+
+
