--- a/src/content/2019-08-11-leetcode-数组部分总结分析.md
+++ b/src/content/2019-08-11-leetcode-数组部分总结分析.md
@@ -13,9 +13,9 @@ image: /asset/2018-08-10.jpg
 该部分总结为 `leetcode` 中数组的题目，选取了其中前 200 道题目左右进行总结，随后会根据难易程度进行相应排列
 # easy
 
-* \#1 两数之和
-* \#26 删除排序数组中的重复项
-* \#27 移除元素
+* \#1 [两数之和](https://leetcode-cn.com/problems/two-sum/)
+* \#26 [删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/)
+* \#27 [移除元素]()
 * \#35 搜索插入位置
 * \#53 最大子序和
 * \#66 加一
@@ -43,7 +43,7 @@ image: /asset/2018-08-10.jpg
    
    ``` javascript
         // 暴力 AC
-        function twoSum(nums, target) {
+        var twoSum = function (nums, target) {
             for (let i = 0; i < nums.length; i++) {
                 for (let j = i + 1; j < nums.length; j++) {
                     if (nums[j] == target - nums[i]) {
@@ -66,7 +66,7 @@ image: /asset/2018-08-10.jpg
 
    ``` javascript
         // 使用了两次迭代
-        var sum = function twoSum(nums, target) {
+        var twoSum = function (nums, target) {
             const map = new Map();
             // 第一次迭代中，将数组的每个值 set 到 map 中
             for (let i = 0; i < nums.length; i++) {
@@ -79,7 +79,6 @@ image: /asset/2018-08-10.jpg
                     return [i, map.get(complement)];
                 }
             }
-            throw new IllegalArgumentException("No two sum solution");
         }
    ```
    
@@ -88,6 +87,82 @@ image: /asset/2018-08-10.jpg
     * 空间复杂度：O（N）
 
 3. 一遍哈希表
+
+   仔细观察一下，我们可以发现，这个问题完全可以在向 `hashMap` 添加元素的时候就作出相应的判断，因此，我们将判断流程从第二次迭代中抽取出来，拿到第一遍迭代中，可以得到：
+   
+      ``` javascript
+        // 使用了一次迭代
+        var twoSum = function (nums, target) {
+            const map = new Map();
+            // 迭代过程中，判断需要的值是否在 hashMap 中
+            // 存在的话对其进行输出，不存在的话将其设定在 hashMap 中
+            for (let i = 0; i < nums.length; i++) {
+                let complement = target - nums[i];
+                if (map.has(complement)) {
+                    return [map.get(complement), i];
+                }
+                map.set(nums[i], i);
+            }
+        }
+   ```
+   
+  **复杂度分析**
+    * 时间复杂度：O（N）
+    * 空间复杂度：O（N）
+
+## 删除排序数组中的重复项
+
+也是一道非常简单的题目，这里可以使用双指针法进行解题。
+
+放置两个指针，其中 `i` 是慢指针，`j` 是快指针，只要 `nums[i] = nums[j]`，增加 `j` 以跳过重复项。
+
+一旦 `nums[i] !== nums[j]`，代表跳过重复项运行已结束，因此需要把 `nums[j]` 的值复制到 `nums[i+1]`，然后递增 `i`，接着重复上述流程，直至 `j` 到达数组尾。
+    
+  ``` javascript
+    var removeDuplicates = function (nums) {
+        if (nums.length == 0) return 0;
+        // 设定一个慢速指针
+        let i = 0;
+        for (let j = 1; j < nums.length; j++) {
+            // 设定一个快速指针 j，将其作为遍历指针
+            // 当快速指针指到非重复值时，将非重复值设定到慢速指针后，替换数组元素
+            if (nums[j] != nums[i]) {
+                i++;
+                nums[i] = nums[j];
+            }
+        }
+        // 最后输出慢速指针的值，即为整个数组的值
+        return i + 1;
+    }
+   ```
+   
+  **复杂度分析**
+    * 时间复杂度：O（N）
+    * 空间复杂度：O（1）
+
+
+## 移除元素
+
+这道题的解决方案也是主要依靠双指针进行的，和上一道题类似，设定一个快指针，一个慢指针
+
+  ``` javascript
+    var removeDuplicates = function (nums, val) {
+        // 设定一个慢速指针
+        let i = 0;
+        for (let j = 1; j < nums.length; j++) {
+            // 设定一个快速指针 j，将其作为遍历指针
+            // 当快速指针指到目标值时，移动快速指针到目标值后，复制 nums[j] 到 nums[i]，同时递增快速指针和慢速指针，依次进行复制
+            if (nums[j] != val) {
+                nums[i] = nums[j];
+                i++;
+            }
+        }
+        // 最后输出慢速指针的值，即为整个数组长度
+        return i;
+    }
+   ```
+
+## 搜索插入位置
 
 # medium
 
