--- a/src/content/2019-08-11-leetcode-数组部分总结分析.md
+++ b/src/content/2019-08-11-leetcode-数组部分总结分析.md
@@ -15,12 +15,12 @@ image: /asset/2018-08-10.jpg
 
 * \#1 [两数之和](https://leetcode-cn.com/problems/two-sum/)
 * \#26 [删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/)
-* \#27 [移除元素]()
-* \#35 搜索插入位置
-* \#53 最大子序和
-* \#66 加一
-* \#88 合并两个有序数组
-* \#118 杨辉三角
+* \#27 [移除元素](https://leetcode-cn.com/problems/remove-element/)
+* \#35 [搜索插入位置](https://leetcode-cn.com/problems/search-insert-position/)
+* \#53 [最大子序和](https://leetcode-cn.com/problems/maximum-subarray/solution/jia-she-ni-shi-yi-ge-du-tu-by-acnesu/)
+* \#66 [加一](https://leetcode-cn.com/problems/plus-one/)
+* \#88 [合并两个有序数组](https://leetcode-cn.com/problems/merge-sorted-array/)
+* \#118 [杨辉三角](https://leetcode-cn.com/problems/pascals-triangle/)
 * \#119 杨辉三角II
 * \#121 买卖股票的最佳时机
 * \#122 买卖股票的最佳时机II
@@ -55,8 +55,8 @@ image: /asset/2018-08-10.jpg
         }
    ```
    **复杂度分析**
-    * 时间复杂度：O（N^2）
-    * 空间复杂度：O（1）
+    * 时间复杂度：`O（N^2）`
+    * 空间复杂度：`O（1）`
    
 2. 两遍哈希表
 
@@ -81,10 +81,9 @@ image: /asset/2018-08-10.jpg
             }
         }
    ```
-   
    **复杂度分析**
-    * 时间复杂度：O（N）
-    * 空间复杂度：O（N）
+    * 时间复杂度：`O（N）`
+    * 空间复杂度：`O（N）`
 
 3. 一遍哈希表
 
@@ -107,8 +106,8 @@ image: /asset/2018-08-10.jpg
    ```
    
 **复杂度分析**
-  * 时间复杂度：O（N）
-  * 空间复杂度：O（N）
+  * 时间复杂度：`O（N）`
+  * 空间复杂度：`O（N）`
 
 ## 删除排序数组中的重复项
 
@@ -135,10 +134,9 @@ image: /asset/2018-08-10.jpg
         return i + 1;
     }
    ```
-   
 **复杂度分析**
-  * 时间复杂度：O（N）
-  * 空间复杂度：O（1）
+  * 时间复杂度：`O（N）`
+  * 空间复杂度：`O（1）`
 
 
 ## 移除元素
@@ -146,14 +144,15 @@ image: /asset/2018-08-10.jpg
 这道题的解决方案也是主要依靠双指针进行的，和上一道题类似，设定一个快指针，一个慢指针
 
   ``` javascript
-    var removeDuplicates = function (nums, val) {
+    var removeElement = function (nums, val) {
         // 设定一个慢速指针
         let i = 0;
-        for (let j = 1; j < nums.length; j++) {
+        for (let j = 0; j < nums.length; j++) {
             // 设定一个快速指针 j，将其作为遍历指针
             // 当快速指针指到目标值时，移动快速指针到目标值后，复制 nums[j] 到 nums[i]，同时递增快速指针和慢速指针，依次进行复制
             if (nums[j] != val) {
                 nums[i] = nums[j];
+                // 直至 j 到达数组的末尾
                 i++;
             }
         }
@@ -161,9 +160,166 @@ image: /asset/2018-08-10.jpg
         return i;
     }
    ```
+   
+ **复杂度分析**
+    * 时间复杂度：`O（N）`（数组总共有 `n` 个元素时，`i` 和 `j` 需要遍历 `2n` 步）
+    * 空间复杂度：`O（1）`
+
+还有一种解法，同样是双指针，适用于删除元素很少的情况
+
+``` javascript
+    var removeElement = function (nums, val) {
+        // 设定两个指针，一个指向开始，一个指向结束
+        let i = 0;
+        let n = nums.length;
+        while(i < n) {
+            if(nums[i] === val) {
+                // 将符合要求的值与最后一个值进行交换
+                nums[i] = nums[n-1];
+                // reduce array size by one
+                // 不增加 i，因为交换过来的值可能是我们希望删除的
+                n--;
+            } else {
+                i++;
+            }
+        }
+        // 最后输出尾指针的值，即为整个数组长度
+        return n;
+    }
+```
+
+ **复杂度分析**
+    * 时间复杂度：`O（N）`
+    * 空间复杂度：`O（1）`
 
 ## 搜索插入位置
 
+简单题目，四个字就足以概括了，`二分查找`。
+二分查找拥有相应的模版，具体请查阅[十分好用的二分查找法模版](https://leetcode-cn.com/problems/search-insert-position/solution/te-bie-hao-yong-de-er-fen-cha-fa-fa-mo-ban-python-/)
+
+``` javascript
+var searchInsert = function (nums, target) {
+  let left = 0;
+  let right = nums.length - 1; // 注意
+  while(left <= right) { // 注意
+    let mid = parseInt((left + right) / 2); // 注意
+    if(nums[mid] == target) { // 注意
+      // 相关逻辑
+      return mid;
+    } else if(nums[mid] < target) {
+      left = mid + 1; // 注意
+    } else {
+      right = mid - 1; // 注意
+    }
+  }
+  // 相关返回值
+  return left;
+}
+```
+
+ **复杂度分析**
+    * 时间复杂度：`O（logN）`
+    * 空间复杂度：`O（1）`
+
+## 最大子序和
+
+这道题有很多种解法，这里按照最简单的逻辑进行讲解
+
+假设你是一个选择性遗忘的赌徒，数组表示你这几天来赢钱或者输钱，
+你用 `sum` 来表示这几天来的输赢，
+用 `ans` 来存储你手里赢到的最多的钱，
+
+如果昨天你手上还是输钱`（sum < 0）`，你忘记它，明天继续赌钱；
+如果你手上是赢钱 `(sum > 0)`, 你记得，你继续赌钱；
+你记得你手气最好的时候
+
+``` javascript
+    var maxSubArray = function(nums) {
+        let ans = nums[0];
+        let sum = 0;
+        for(let num of nums) {
+            // if(sum > 0) { 可以写成这样
+            if(sum + num > num ){
+                sum = sum + num;
+            } else {
+                sum = num;
+            }
+            ans = Math.max(ans, sum);
+        };
+        return ans;
+    };
+```
+
+ **复杂度分析**
+    * 时间复杂度：`O（N）`
+    * 空间复杂度：`O（N）`
+
+## 加一
+
+这道题甚至用不到算法，因此简单记述一下
+
+```javascript
+var plusOne = function(digits) {
+    const len = digits.length;
+    // 从后往前，个位开始找起
+    for(let i = len - 1; i >= 0; i--) {
+        digits[i]++;
+        digits[i] %= 10;
+        // 如果进位后不大于 10，结束循环
+        if(digits[i] !== 0)
+            return digits;
+    }
+    digits = [...Array(len + 1)].map(_=>0);;
+    digits[0] = 1;
+    return digits;
+};
+```
+
+## 合并两个有序数组
+
+这道题与之前类似，使用双指针的方法进行解答
+
+`leetcode` 官方题解采用了三种解法，依次说明一下
+
+1. 合并后排序
+
+极其朴素的解法，先合并两个数组，再对其进行排序，这里省去相关代码（实在是过于简单了）
+
+ **复杂度分析**
+    * 时间复杂度：`O（（n+m）log（n+m））`
+    * 空间复杂度：`O（1）`
+
+    2. 双指针 / 从前往后
+
+    为两个数组分别设定两个指针 `p1`、`p2`，通过双指针遍历两个数组，得到数组中的最小值，放到输出数组中（实现也非常简单，所以不贴出相关代码）
+    
+ **复杂度分析**
+    * 时间复杂度：`O（n+m）`
+    * 空间复杂度：`O（1）`
+
+3. 双指针 / 从后往前
+
+实际上简单分析后可以知道，我们并不需要输出数组，只需要在 `nums1` 上直接做修改就可以了。因此需要一个指针 `p`，用来追踪添加元素的位置。
+
+```javascript
+    let len1 = m - 1;
+    let len2 = n - 1;
+    while(len1 >= 0 && len2 >= 0) {
+        // 注意--符号在后面，表示先进行计算再减1，这种缩写缩短了代码
+        nums1[len--] = nums1[len1] > nums2[len2] ? nums1[len1--] : nums2[len2--];
+    }
+    function arrayCopy(src, srcIndex, dest, destIndex, length) {
+    splice(destIndex, length, ...src.slice(srcIndex, srcIndex + length));
+    }
+    // 表示将nums2数组从下标0位置开始，拷贝到nums1数组中，从下标0位置开始，长度为len2+1
+    arrayCopy(nums2, 0, nums1, 0, len2 + 1);
+```
+
+## 杨辉三角
+
+
+
+## 杨辉三角 II
 # medium
 
 # hard
