--- a/src/content/2019-08-11-leetcode-数组部分总结分析.md
+++ b/src/content/2019-08-11-leetcode-数组部分总结分析.md
@@ -21,7 +21,7 @@ image: /asset/2018-08-10.jpg
 * \#66 [加一](https://leetcode-cn.com/problems/plus-one/)
 * \#88 [合并两个有序数组](https://leetcode-cn.com/problems/merge-sorted-array/)
 * \#118 [杨辉三角](https://leetcode-cn.com/problems/pascals-triangle/)
-* \#119 杨辉三角II
+* \#119 [杨辉三角II](https://leetcode-cn.com/problems/pascals-triangle-ii/)
 * \#121 买卖股票的最佳时机
 * \#122 买卖股票的最佳时机II
 * \#167 两数之和 II - 输入有序数组
@@ -295,7 +295,7 @@ var plusOne = function(digits) {
     
  **复杂度分析**
     * 时间复杂度：`O（n+m）`
-    * 空间复杂度：`O（1）`
+    * 空间复杂度：`O（m）`
 
 3. 双指针 / 从后往前
 
@@ -314,12 +314,80 @@ var plusOne = function(digits) {
     // 表示将nums2数组从下标0位置开始，拷贝到nums1数组中，从下标0位置开始，长度为len2+1
     arrayCopy(nums2, 0, nums1, 0, len2 + 1);
 ```
+    
+ **复杂度分析**
+    * 时间复杂度：`O（n+m）`
+    * 空间复杂度：`O（1）`
+
 
 ## 杨辉三角
 
+杨辉三角输出是一道典型的动态规划题目，如果我们知道一行杨辉三角，我们就可以根据每对相邻的值计算出它的下一行
 
+```javascript
+    var generate = function(numRows) {
+        let triangle = [];
+
+        // First base case; if user requests zero rows, they get zero rows.
+        if (numRows == 0) {
+            return triangle;
+        }
+
+        // Second base case; first row is always [1].
+        triangle.push([])
+        triangle[0].push(1);
+
+        for (let rowNum = 1; rowNum < numRows; rowNum++) {
+            let row = []
+            let prevRow = triangle[rowNum-1];
+
+            // The first row element is always 1.
+            row.push(1);
+
+            // Each triangle element (other than the first and last of each row)
+            // is equal to the sum of the elements above-and-to-the-left and
+            // above-and-to-the-right.
+            for (let j = 1; j < rowNum; j++) {
+                row.push(prevRow[j-1] + prevRow[j]);
+            }
+
+            // The last row element is always 1.
+            row.push(1);
+
+            triangle.push(row);
+        }
+
+        return triangle;
+    };
+```
+
+ **复杂度分析**
+    * 时间复杂度：`O（numRows^2）`（原因在于，生成三角形需要遍历每行，而下一行的数需要遍历上一行的每个值生成）
+    * 空间复杂度：`O（numRows^2）`（同理，一个二维数组）
 
 ## 杨辉三角 II
+
+实际上这道题最为优雅的解法，就是调用二项式定理，寻找通项公式即可。
+
+（后续会补充二项式定理说明）
+
+``` javascript
+    var getRow = function(rowIndex) {
+        let rs= new Array();
+        let m = 1;
+        for(let i=0;i<=rowIndex;i++){
+            rs.push(m);
+            m = m*(rowIndex-i)/(i+1);
+        }
+        return rs;
+    };
+```
+
+ **复杂度分析**
+    * 时间复杂度：`O（numRows）`
+    * 空间复杂度：`O（numRows）`
+
+
 # medium
 
 # hard
