--- a/src/content/2019-08-11-leetcode-数组部分总结分析.md
+++ b/src/content/2019-08-11-leetcode-数组部分总结分析.md
@@ -22,16 +22,13 @@ image: /asset/2018-08-10.jpg
 * \#88 [合并两个有序数组](https://leetcode-cn.com/problems/merge-sorted-array/)
 * \#118 [杨辉三角](https://leetcode-cn.com/problems/pascals-triangle/)
 * \#119 [杨辉三角II](https://leetcode-cn.com/problems/pascals-triangle-ii/)
-* \#121 买卖股票的最佳时机
-* \#122 买卖股票的最佳时机II
-* \#167 两数之和 II - 输入有序数组
-* \#169 求众数
-* \#189 旋转数组
-* \#217 存在重复元素
-* \#661 图片平滑器
-* \#665 非递减序列
-* \#674 最长连续递增序列
-* \#832 翻转图像
+* \#121 [买卖股票的最佳时机](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/)
+* \#122 [买卖股票的最佳时机II](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-ii/)
+* \#167 [两数之和 II - 输入有序数组](https://leetcode-cn.com/problems/two-sum-ii-input-array-is-sorted/)
+* \#169 [求众数](https://leetcode-cn.com/problems/majority-element/)
+* \#189 [旋转数组](https://leetcode-cn.com/problems/rotate-array/)
+* \#661 [图片平滑器](https://leetcode-cn.com/problems/image-smoother/)
+* \#832 [翻转图像](https://leetcode-cn.com/problems/flipping-an-image/)
 
 ## 两数之和（Two Sum）
 
@@ -387,6 +384,243 @@ var plusOne = function(digits) {
   * 时间复杂度：`O（numRows）`
   * 空间复杂度：`O（numRows）`
 
+## 买卖股票的最佳时机
+
+这里实质上是在找数组中的波峰与波谷，因此略去低端的暴力递归法不谈，直接讲一次遍历的方法。
+
+我们感兴趣的点是图中最低谷后的高峰，因此可以设定 `minprice` 和 `maxprofit`，分别对应迄今为止得到的谷值与最大利润。
+
+``` javascript
+var maxProfit = function (prices) {
+    // 波谷，预设为最大值
+    let minprice = Number.MAX_SAFE_INTEGER;
+    // 最大利润值
+    let maxprofit = 0;
+    for (let i = 0; i < prices.length; i++) {
+        // 找波谷
+        if (prices[i] < minprice)
+            minprice = prices[i];
+        // 找最大利润值
+        else if (prices[i] - minprice > maxprofit)
+            maxprofit = prices[i] - minprice;
+    }
+    return maxprofit;
+};
+```
+
+**复杂度分析**
+  * 时间复杂度：O(N)
+  * 空间复杂度：O(1)
+
+## 买卖股票的最佳时机 II
+
+同理，暴力法直接略过不提，这里依旧利用第一题的峰谷法进行分析
+
+![d447f96d20d1cfded20a5d08993b3658ed08e295ecc9aea300ad5e3f4466e0fe-file_1555699515174](https://7xrad6.com1.z0.glb.clouddn.com/d447f96d20d1cfded20a5d08993b3658ed08e295ecc9aea300ad5e3f4466e0fe-file_1555699515174.png)
+
+上图可以看出来，我们实际上关心的是连续上升的部分，因此可以写出下列代码：
+
+``` javascript
+var maxProfit = function (prices) {
+  let i = 0;
+  let valley = prices[0];
+  let peak = prices[0];
+  let maxprofit = 0;
+  // 遍历至数组结尾
+  while (i < prices.length - 1) {
+    // 持续递增指针，使之指向波谷
+    while (i < prices.length - 1 && prices[i] >= prices[i + 1])
+      i++;
+    valley = prices[i];
+    // 持续递增指针，使之指向波峰
+    while (i < prices.length - 1 && prices[i] <= prices[i + 1])
+      i++;
+    peak = prices[i];
+    // 利润值 = 波峰 - 波谷
+    maxprofit += peak - valley;
+  }
+  // 遍历结束后，返回 maxprofit
+  return maxprofit;
+};
+```
+
+**复杂度分析**
+  * 时间复杂度：O(N)
+  * 空间复杂度：O(1)
+
+实际上上述代码可以做出一定的简化，即简单在斜坡上爬升，持续增加获取利润，当后一个数小于前一个数时停止，这样持续计算，即可获得最大利润
+
+``` javascript
+var maxProfit = function (prices) {
+    let maxprofit = 0;
+    for (let i = 1; i < prices.length; i++) {
+        if (prices[i] > prices[i - 1])
+            maxprofit += prices[i] - prices[i - 1];
+    }
+    return maxprofit;
+};
+```
+
+**复杂度分析**
+  * 时间复杂度：O(N)
+  * 空间复杂度：O(1)
+
+## 两数之和 II - 输入有序数组
+
+这道题可以运用之前的哈希表等方法实现，但是这并没有运用数组已经排序的性质，因此这里需要提出一套新的解法
+
+实际上，排序好的数组非常适合使用双指针法进行解答
+
+我们使用两个指针，初始分别位于第一个元素和最后一个元素位置，比较这两个元素之和与目标值的大小。如果和等于目标值，我们发现了这个唯一解。如果比目标值小，我们将较小元素指针增加一。如果比目标值大，我们将较大指针减小一。移动指针后重复上述比较知道找到答案。
+
+``` javascript
+var twoSum = function(numbers, target) {
+  let low = 0;
+  let high = numbers.length - 1;
+  while (low < high) {
+    let sum = numbers[low] + numbers[high];
+    if (sum === target)
+      return [low + 1, high + 1];
+    else if (sum < target)
+      ++low;
+    else
+      --high;
+  }
+  return [-1, -1];
+};
+```
+
+**复杂度分析**
+  * 时间复杂度：O(N)
+  * 空间复杂度：O(1)
+
+## 求众数
+
+先占个坑
+
+## 旋转数组
+
+同理，暴力法直接略过不提
+
+1. 使用额外数组可以完成这道题，就是把下标为 `i` 的放到 `(i+k) % 数组长度` 的位置，然后把新数组拷贝到原数组中。
+
+解法直接略过不提，做一下复杂度分析
+
+**复杂度分析**
+  * 时间复杂度：O(N)
+  * 空间复杂度：O(N)
+
+2. 使用环状替换，实际上这种方法有点类似于希尔排序，就是把每个数同数组长度进行取余，得出两个元素之间隔多少个元素可进行互相交换，如下图所示
+
+![f0493a97cdb7bc46b37306ca14e555451496f9f9c21effcad8517a81a26f30d6-image](https://7xrad6.com1.z0.glb.clouddn.com/f0493a97cdb7bc46b37306ca14e555451496f9f9c21effcad8517a81a26f30d6-image.png)
+
+```javascript
+var rotate = function(nums, k) {
+  k = k % nums.length;
+  let count = 0;
+  for (let start = 0; count < nums.length; start++) {
+    let current = start;
+    let prev = nums[start];
+    do {
+      let next = (current + k) % nums.length;
+      let temp = nums[next];
+      nums[next] = prev;
+      prev = temp;
+      current = next;
+      count++;
+    } while (start != current);
+  }
+};
+```
+
+**复杂度分析**
+  * 时间复杂度：O(N)
+  * 空间复杂度：O(1)
+
+3. 反转整个数组，然后在第 `K` 位前（题目要求你移动 `K` 位的位置）进行一次反转，第 `K` 位后进行一次反转即可得到目标数值
+
+```javascript
+var rotate = function(nums, k) {
+  k %= nums.length;
+  reverse(nums, 0, nums.length - 1);
+  reverse(nums, 0, k - 1);
+  reverse(nums, k, nums.length - 1);
+};
+
+var reverse = function (nums, start, end) {
+  while (start < end) {
+    let temp = nums[start];
+    nums[start] = nums[end];
+    nums[end] = temp;
+    start++;
+    end--;
+  }
+}
+```
+
+**复杂度分析**
+  * 时间复杂度：O(N)
+  * 空间复杂度：O(1)
+
+## 图片平滑器
+
+这道题，实际上要注意的就是一点，如何取周围的点，这里截取的解法是运用标记数组寻找周围的点进行求解。
+
+```javascript
+const imageSmoother = (M) => {
+  if (M == null || M.length < 1 || M[0] == null || M[0].length < 1) {
+    return null;
+  }
+
+  row = M.length;
+  col = M[row - 1].length;
+
+  const ans = [];
+  for (let i = 0; i < row; i++) {
+    ans[i] = new Array();
+    for (let j = 0; j < col; j++) {
+      ans[i][j] = calcul(M, i, j);
+    }
+  }
+
+  return ans;
+}
+
+// 上、下、左、右，上左，上右，下左，下右
+// 上下
+const dirR = [-1,1,0,0,-1,-1,1,1];
+// 左右
+const dirC = [0,0,-1,1,-1,1,-1,1];
+
+const calcul = (arr, i, j) => {
+  let count = 1;
+  let sum = arr[i][j];
+
+  for (let k = 0; k < dirR.length; k++) {
+    const nextR = i + dirR[k];
+    const nextC = j + dirC[k];
+
+    if (nextR >= 0 && nextR < row && nextC >= 0 && nextC < col) {
+      count++;
+      sum += arr[nextR][nextC];
+    }
+  }
+
+  return Math.floor(sum / count);
+}
+```
+
+**复杂度分析**
+  * 时间复杂度：O(N^2)
+  * 空间复杂度：O(1)
+
+## 翻转图像
+  
+直接上代码吧，也懒得做复杂度分析了
+  
+```javascript
+var flipAndInvertImage = (A) => A.map((item) => item.reverse().map(px => px ^ 1));
+```
 
 # medium
 
