Update Blog “2019-08-11-leetcode-数组部分总结分析”

--- a/src/content/2019-08-11-leetcode-数组部分总结分析.md
+++ b/src/content/2019-08-11-leetcode-数组部分总结分析.md
@@ -9,8 +9,10 @@ tags:
 image: /asset/2018-08-10.jpg
 ---
 # 概览
+
 最近正在刷 `leetcode`，希望针对其中不同种类的题目进行一下解法总结，因此书写了这篇文章供复习使用。
 该部分总结为 `leetcode` 中数组的题目，选取了其中前 200 道题目左右进行总结，随后会根据难易程度进行相应排列
+
 # easy
 
 * \#1 [两数之和](https://leetcode-cn.com/problems/two-sum/)
@@ -35,10 +37,8 @@ image: /asset/2018-08-10.jpg
 两数之和是一道极其经典且简单的题目，以下介绍三种方法
 
 1. 暴力法
-
    最简单的解法，遍历每个元素 `x`，并查找是否存在一个与 `target-x` 相等的元素
-   
-   ``` javascript
+   ```javascript
         // 暴力 AC
         var twoSum = function (nums, target) {
             for (let i = 0; i < nums.length; i++) {
@@ -52,16 +52,12 @@ image: /asset/2018-08-10.jpg
         }
    ```
    **复杂度分析**
-    * 时间复杂度：`O（N^2）`
-    * 空间复杂度：`O（1）`
-   
+   * 时间复杂度：`O（N^2）`
+   * 空间复杂度：`O（1）`
 2. 两遍哈希表
-
     实际上这个问题能够被继续精简，通过空间换时间的方式降低时间复杂度
-    
     本问题中，我们需要将 `index` 和 `elemenet` 一一对应起来，根据 `sum - target1 = target2` 这个准则，利用 `target1` 去哈希表中寻找 `target2`。
-
-   ``` javascript
+   ```javascript
         // 使用了两次迭代
         var twoSum = function (nums, target) {
             const map = new Map();
@@ -79,32 +75,30 @@ image: /asset/2018-08-10.jpg
         }
    ```
    **复杂度分析**
-    * 时间复杂度：`O（N）`
-    * 空间复杂度：`O（N）`
-
+   * 时间复杂度：`O（N）`
+   * 空间复杂度：`O（N）`
 3. 一遍哈希表
-
    仔细观察一下，我们可以发现，这个问题完全可以在向 `hashMap` 添加元素的时候就作出相应的判断，因此，我们将判断流程从第二次迭代中抽取出来，拿到第一遍迭代中，可以得到：
-   
-      ``` javascript
-        // 使用了一次迭代
-        var twoSum = function (nums, target) {
-            const map = new Map();
-            // 迭代过程中，判断需要的值是否在 hashMap 中
-            // 存在的话对其进行输出，不存在的话将其设定在 hashMap 中
-            for (let i = 0; i < nums.length; i++) {
-                let complement = target - nums[i];
-                if (map.has(complement)) {
-                    return [map.get(complement), i];
-                }
-                map.set(nums[i], i);
-            }
-        }
+   ```javascript
+     // 使用了一次迭代
+     var twoSum = function (nums, target) {
+         const map = new Map();
+         // 迭代过程中，判断需要的值是否在 hashMap 中
+         // 存在的话对其进行输出，不存在的话将其设定在 hashMap 中
+         for (let i = 0; i < nums.length; i++) {
+             let complement = target - nums[i];
+             if (map.has(complement)) {
+                 return [map.get(complement), i];
+             }
+             map.set(nums[i], i);
+         }
+     }
    ```
-   
+
 **复杂度分析**
-  * 时间复杂度：`O（N）`
-  * 空间复杂度：`O（N）`
+
+* 时间复杂度：`O（N）`
+* 空间复杂度：`O（N）`
 
 ## 删除排序数组中的重复项
 
@@ -114,57 +108,59 @@ image: /asset/2018-08-10.jpg
 
 一旦 `nums[i] !== nums[j]`，代表跳过重复项运行已结束，因此需要把 `nums[j]` 的值复制到 `nums[i+1]`，然后递增 `i`，接着重复上述流程，直至 `j` 到达数组尾。
     
-  ``` javascript
-    var removeDuplicates = function (nums) {
-        if (nums.length == 0) return 0;
-        // 设定一个慢速指针
-        let i = 0;
-        for (let j = 1; j < nums.length; j++) {
-            // 设定一个快速指针 j，将其作为遍历指针
-            // 当快速指针指到非重复值时，将非重复值设定到慢速指针后，替换数组元素
-            if (nums[j] != nums[i]) {
-                i++;
-                nums[i] = nums[j];
-            }
-        }
-        // 最后输出慢速指针的值，即为整个数组的值
-        return i + 1;
-    }
-   ```
-**复杂度分析**
-  * 时间复杂度：`O（N）`
-  * 空间复杂度：`O（1）`
 
+```javascript
+  var removeDuplicates = function (nums) {
+      if (nums.length == 0) return 0;
+      // 设定一个慢速指针
+      let i = 0;
+      for (let j = 1; j < nums.length; j++) {
+          // 设定一个快速指针 j，将其作为遍历指针
+          // 当快速指针指到非重复值时，将非重复值设定到慢速指针后，替换数组元素
+          if (nums[j] != nums[i]) {
+              i++;
+              nums[i] = nums[j];
+          }
+      }
+      // 最后输出慢速指针的值，即为整个数组的值
+      return i + 1;
+  }
+```
+
+**复杂度分析**
+
+* 时间复杂度：O（N）
+* 空间复杂度：O（1）
 
 ## 移除元素
 
 这道题的解决方案也是主要依靠双指针进行的，和上一道题类似，设定一个快指针，一个慢指针
 
-  ``` javascript
-    var removeElement = function (nums, val) {
-        // 设定一个慢速指针
-        let i = 0;
-        for (let j = 0; j < nums.length; j++) {
-            // 设定一个快速指针 j，将其作为遍历指针
-            // 当快速指针指到目标值时，移动快速指针到目标值后，复制 nums[j] 到 nums[i]，同时递增快速指针和慢速指针，依次进行复制
-            if (nums[j] != val) {
-                nums[i] = nums[j];
-                // 直至 j 到达数组的末尾
-                i++;
-            }
-        }
-        // 最后输出慢速指针的值，即为整个数组长度
-        return i;
-    }
-   ```
-   
- **复杂度分析**
-    * 时间复杂度：`O（N）`（数组总共有 `n` 个元素时，`i` 和 `j` 需要遍历 `2n` 步）
-    * 空间复杂度：`O（1）`
+```javascript
+  var removeElement = function (nums, val) {
+      // 设定一个慢速指针
+      let i = 0;
+      for (let j = 0; j < nums.length; j++) {
+          // 设定一个快速指针 j，将其作为遍历指针
+          // 当快速指针指到目标值时，移动快速指针到目标值后，复制 nums[j] 到 nums[i]，同时递增快速指针和慢速指针，依次进行复制
+          if (nums[j] != val) {
+              nums[i] = nums[j];
+              // 直至 j 到达数组的末尾
+              i++;
+          }
+      }
+      // 最后输出慢速指针的值，即为整个数组长度
+      return i;
+  }
+```
+
+**复杂度分析**
+  * 时间复杂度：`O（N）`（数组总共有 `n` 个元素时，`i` 和 `j` 需要遍历 `2n` 步）
+  * 空间复杂度：`O（1）`
 
 还有一种解法，同样是双指针，适用于删除元素很少的情况
 
-``` javascript
+```javascript
     var removeElement = function (nums, val) {
         // 设定两个指针，一个指向开始，一个指向结束
         let i = 0;
@@ -186,15 +182,16 @@ image: /asset/2018-08-10.jpg
 ```
 
 **复杂度分析**
-  * 时间复杂度：`O（N）`
-  * 空间复杂度：`O（1）`
+
+* 时间复杂度：`O（N）`
+* 空间复杂度：`O（1）`
 
 ## 搜索插入位置
 
 简单题目，四个字就足以概括了，`二分查找`。
 二分查找拥有相应的模版，具体请查阅[十分好用的二分查找法模版](https://leetcode-cn.com/problems/search-insert-position/solution/te-bie-hao-yong-de-er-fen-cha-fa-fa-mo-ban-python-/)
 
-``` javascript
+```javascript
 var searchInsert = function (nums, target) {
   let left = 0;
   let right = nums.length - 1; // 注意
@@ -215,8 +212,9 @@ var searchInsert = function (nums, target) {
 ```
 
 **复杂度分析**
-  * 时间复杂度：`O（logN）`
-  * 空间复杂度：`O（1）`
+
+* 时间复杂度：`O（logN）`
+* 空间复杂度：`O（1）`
 
 ## 最大子序和
 
@@ -230,7 +228,7 @@ var searchInsert = function (nums, target) {
 如果你手上是赢钱 `(sum > 0)`, 你记得，你继续赌钱；
 你记得你手气最好的时候
 
-``` javascript
+```javascript
     var maxSubArray = function(nums) {
         let ans = nums[0];
         let sum = 0;
@@ -248,8 +246,9 @@ var searchInsert = function (nums, target) {
 ```
 
 **复杂度分析**
-  * 时间复杂度：`O（N）`
-  * 空间复杂度：`O（N）`
+
+* 时间复杂度：`O（N）`
+* 空间复杂度：`O（N）`
 
 ## 加一
 
@@ -283,16 +282,19 @@ var plusOne = function(digits) {
 极其朴素的解法，先合并两个数组，再对其进行排序，这里省去相关代码（实在是过于简单了）
 
  **复杂度分析**
-    * 时间复杂度：`O（（n+m）log（n+m））`
-    * 空间复杂度：`O（1）`
+     _时间复杂度：`O（（n+m）log（n+m））`
+    _ 空间复杂度：`O（1）`
 
-    2. 双指针 / 从前往后
+```
+2. 双指针 / 从前往后
 
-    为两个数组分别设定两个指针 `p1`、`p2`，通过双指针遍历两个数组，得到数组中的最小值，放到输出数组中（实现也非常简单，所以不贴出相关代码）
-    
+为两个数组分别设定两个指针 `p1`、`p2`，通过双指针遍历两个数组，得到数组中的最小值，放到输出数组中（实现也非常简单，所以不贴出相关代码）
+```
+
 **复杂度分析**
-  * 时间复杂度：`O（n+m）`
-  * 空间复杂度：`O（m）`
+
+* 时间复杂度：`O（n+m）`
+* 空间复杂度：`O（m）`
 
 3. 双指针 / 从后往前
 
@@ -311,11 +313,11 @@ var plusOne = function(digits) {
     // 表示将nums2数组从下标0位置开始，拷贝到nums1数组中，从下标0位置开始，长度为len2+1
     arrayCopy(nums2, 0, nums1, 0, len2 + 1);
 ```
-    
-**复杂度分析**
-  * 时间复杂度：`O（n+m）`
-  * 空间复杂度：`O（1）`
 
+**复杂度分析**
+
+* 时间复杂度：`O（n+m）`
+* 空间复杂度：`O（1）`
 
 ## 杨辉三角
 
@@ -359,8 +361,9 @@ var plusOne = function(digits) {
 ```
 
 **复杂度分析**
-  * 时间复杂度：`O（numRows^2）`（原因在于，生成三角形需要遍历每行，而下一行的数需要遍历上一行的每个值生成）
-  * 空间复杂度：`O（numRows^2）`（同理，一个二维数组）
+
+* 时间复杂度：`O（numRows^2）`（原因在于，生成三角形需要遍历每行，而下一行的数需要遍历上一行的每个值生成）
+* 空间复杂度：`O（numRows^2）`（同理，一个二维数组）
 
 ## 杨辉三角 II
 
@@ -368,7 +371,7 @@ var plusOne = function(digits) {
 
 （后续会补充二项式定理说明）
 
-``` javascript
+```javascript
     var getRow = function(rowIndex) {
         let rs= new Array();
         let m = 1;
@@ -381,8 +384,9 @@ var plusOne = function(digits) {
 ```
 
 **复杂度分析**
-  * 时间复杂度：`O（numRows）`
-  * 空间复杂度：`O（numRows）`
+
+* 时间复杂度：`O（numRows）`
+* 空间复杂度：`O（numRows）`
 
 ## 买卖股票的最佳时机
 
@@ -390,7 +394,7 @@ var plusOne = function(digits) {
 
 我们感兴趣的点是图中最低谷后的高峰，因此可以设定 `minprice` 和 `maxprofit`，分别对应迄今为止得到的谷值与最大利润。
 
-``` javascript
+```javascript
 var maxProfit = function (prices) {
     // 波谷，预设为最大值
     let minprice = Number.MAX_SAFE_INTEGER;
@@ -409,8 +413,9 @@ var maxProfit = function (prices) {
 ```
 
 **复杂度分析**
-  * 时间复杂度：O(N)
-  * 空间复杂度：O(1)
+
+* 时间复杂度：O(N)
+* 空间复杂度：O(1)
 
 ## 买卖股票的最佳时机 II
 
@@ -420,7 +425,7 @@ var maxProfit = function (prices) {
 
 上图可以看出来，我们实际上关心的是连续上升的部分，因此可以写出下列代码：
 
-``` javascript
+```javascript
 var maxProfit = function (prices) {
   let i = 0;
   let valley = prices[0];
@@ -445,12 +450,13 @@ var maxProfit = function (prices) {
 ```
 
 **复杂度分析**
-  * 时间复杂度：O(N)
-  * 空间复杂度：O(1)
+
+* 时间复杂度：O(N)
+* 空间复杂度：O(1)
 
 实际上上述代码可以做出一定的简化，即简单在斜坡上爬升，持续增加获取利润，当后一个数小于前一个数时停止，这样持续计算，即可获得最大利润
 
-``` javascript
+```javascript
 var maxProfit = function (prices) {
     let maxprofit = 0;
     for (let i = 1; i < prices.length; i++) {
@@ -462,8 +468,9 @@ var maxProfit = function (prices) {
 ```
 
 **复杂度分析**
-  * 时间复杂度：O(N)
-  * 空间复杂度：O(1)
+
+* 时间复杂度：O(N)
+* 空间复杂度：O(1)
 
 ## 两数之和 II - 输入有序数组
 
@@ -473,7 +480,7 @@ var maxProfit = function (prices) {
 
 我们使用两个指针，初始分别位于第一个元素和最后一个元素位置，比较这两个元素之和与目标值的大小。如果和等于目标值，我们发现了这个唯一解。如果比目标值小，我们将较小元素指针增加一。如果比目标值大，我们将较大指针减小一。移动指针后重复上述比较知道找到答案。
 
-``` javascript
+```javascript
 var twoSum = function(numbers, target) {
   let low = 0;
   let high = numbers.length - 1;
@@ -491,8 +498,9 @@ var twoSum = function(numbers, target) {
 ```
 
 **复杂度分析**
-  * 时间复杂度：O(N)
-  * 空间复杂度：O(1)
+
+* 时间复杂度：O(N)
+* 空间复杂度：O(1)
 
 ## 求众数
 
@@ -507,8 +515,9 @@ var twoSum = function(numbers, target) {
 解法直接略过不提，做一下复杂度分析
 
 **复杂度分析**
-  * 时间复杂度：O(N)
-  * 空间复杂度：O(N)
+
+* 时间复杂度：O(N)
+* 空间复杂度：O(N)
 
 2. 使用环状替换，实际上这种方法有点类似于希尔排序，就是把每个数同数组长度进行取余，得出两个元素之间隔多少个元素可进行互相交换，如下图所示
 
@@ -534,8 +543,9 @@ var rotate = function(nums, k) {
 ```
 
 **复杂度分析**
-  * 时间复杂度：O(N)
-  * 空间复杂度：O(1)
+
+* 时间复杂度：O(N)
+* 空间复杂度：O(1)
 
 3. 反转整个数组，然后在第 `K` 位前（题目要求你移动 `K` 位的位置）进行一次反转，第 `K` 位后进行一次反转即可得到目标数值
 
@@ -559,8 +569,9 @@ var reverse = function (nums, start, end) {
 ```
 
 **复杂度分析**
-  * 时间复杂度：O(N)
-  * 空间复杂度：O(1)
+
+* 时间复杂度：O(N)
+* 空间复杂度：O(1)
 
 ## 图片平滑器
 
@@ -611,13 +622,14 @@ const calcul = (arr, i, j) => {
 ```
 
 **复杂度分析**
-  * 时间复杂度：O(N^2)
-  * 空间复杂度：O(1)
+
+* 时间复杂度：O(N^2)
+* 空间复杂度：O(1)
 
 ## 翻转图像
-  
+
 直接上代码吧，也懒得做复杂度分析了
-  
+
 ```javascript
 var flipAndInvertImage = (A) => A.map((item) => item.reverse().map(px => px ^ 1));
 ```
@@ -625,5 +637,3 @@ var flipAndInvertImage = (A) => A.map((item) => item.reverse().map(px => px ^ 1)
 # medium
 
 # hard
-
-
