--- a/src/content/2019-08-11-leetcode-数组部分总结分析.md
+++ b/src/content/2019-08-11-leetcode-数组部分总结分析.md
@@ -636,4 +636,102 @@ var flipAndInvertImage = (A) => A.map((item) => item.reverse().map(px => px ^ 1)
 
 # medium
 
+* \#11 [盛最多水的容器](https://leetcode-cn.com/problems/container-with-most-water/)
+* \#15 [三数之和](https://leetcode-cn.com/problems/3sum/)
+* \#16 [最接近的三数之和](https://leetcode-cn.com/problems/3sum-closest/)
+* \#18 [四数之和](https://leetcode-cn.com/problems/search-insert-position/)
+* \#31 [下一个排列](https://leetcode-cn.com/problems/maximum-subarray/solution/jia-she-ni-shi-yi-ge-du-tu-by-acnesu/)
+* \#33 [搜索旋转排序数组](https://leetcode-cn.com/problems/plus-one/)
+* \#34 [在排序数组中查找元素的第一个和最后一个位置](https://leetcode-cn.com/problems/merge-sorted-array/)
+* \#39 [组合总和](https://leetcode-cn.com/problems/pascals-triangle/)
+* \#40 [组合总和II](https://leetcode-cn.com/problems/pascals-triangle-ii/)
+* \#48 [旋转图像](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/)
+* \#54 [螺旋矩阵](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-ii/)
+* \#55 [跳跃游戏](https://leetcode-cn.com/problems/two-sum-ii-input-array-is-sorted/)
+* \#56 [合并区间](https://leetcode-cn.com/problems/majority-element/)
+
+## 盛最多水的容器
+
+这道题的题解吧，实际上也是蛮简单的，同样略过暴力法不谈，直接看双指针法。
+
+两条线段组成的区域总会受到**最短的那条线段**的限制，此外，两条线段间隔越远，所得到的长度也会越大。
+
+因此，放置两个指针，一个开头，一个结尾即可，计算出更大面积时更新 `maxArea`，相遇时结束。
+
+```javascript
+/**
+ * @param {number[]} height
+ * @return {number}
+ */
+const maxArea = function(height) {
+    let maxarea = 0;
+    let l = 0;
+    let r = height.length - 1;
+    while (l < r) {
+        maxarea = Math.max(maxarea, Math.min(height[l], height[r]) * (r - l));
+        if (height[l] < height[r])
+            l++;
+        else
+            r--;
+    }
+    return maxarea;
+};
+```
+
+**复杂度分析**
+
+* 时间复杂度：O(N)
+* 空间复杂度：O(1)
+
+## 三数之和
+
+记录一下这道题解：[三数之和题解](https://leetcode-cn.com/problems/3sum/solution/three-sum-ti-jie-by-wonderful611/)
+
+简单阐述一下上面的思路，同样可以利用之前二数之和的哈希表思路来做，但是可以换一种方法，运用空间复杂度更低的方法做。
+
+1. 对数组进行排序，固定一个数`num[i]`，运用双指针指向该数之后的两端，即 `num[L]` 和 `num[R]`，计算三数之和是否为 0，满足则加入结果集。
+2. `num[i] > 0`，代表最小值大于 0，则一定无解。
+3. `num[i] == num[i-1]`，则说明当前数字重复，可能导致三元组重复，跳过。
+4. `sum == 0` 时，`num[L] == num[L+1]` 会导致三元组重复，`L++` 跳过。
+5. `sum == 0` 时，`num[R] == num[R-1]` 会导致三元组重复，`R--` 跳过。
+
+```javascript
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var threeSum = function(nums) {
+    let ans = [];
+    const len = nums.length;
+    if(nums == null || len < 3) return ans;
+    nums.sort((a, b) => a - b); // 排序
+    for (let i = 0; i < len ; i++) {
+        if(nums[i] > 0) break; // 如果当前数字大于0，则三数之和一定大于0，所以结束循环
+        if(i > 0 && nums[i] == nums[i-1]) continue; // 去重
+        let L = i+1;
+        let R = len-1;
+        while(L < R){
+            const sum = nums[i] + nums[L] + nums[R];
+            if(sum == 0){
+                ans.push([nums[i],nums[L],nums[R]]);
+                while (L<R && nums[L] == nums[L+1]) L++; // 去重
+                while (L<R && nums[R] == nums[R-1]) R--; // 去重
+                L++;
+                R--;
+            }
+            else if (sum < 0) L++;
+            else if (sum > 0) R--;
+        }
+    }        
+    return ans;
+};
+```
+
+**复杂度分析**
+
+* 时间复杂度：O(N^2)
+* 空间复杂度：O(1)
+
 # hard
+
+
