--- a/src/content/2019-08-11-leetcode-数组部分总结分析.md
+++ b/src/content/2019-08-11-leetcode-数组部分总结分析.md
@@ -732,6 +732,50 @@ var threeSum = function(nums) {
 * 时间复杂度：O(N^2)
 * 空间复杂度：O(1)
 
+## 最接近的三数之和
+
+这道题是上面那道三数之和的扩展，因为只要求输出一个结果，因此可以省去上面的去重。
+
+简单记录一下
+
+1. 首先进行数组排序
+2. 遍历数组 `nums`，形成固定值 `nums[i]`
+3. 使用前指针指向 `start = i + 1` 处，后指针指向 `end = nums.length - 1` 处，也就是结尾处
+4. 根据 `sum = nums[i] + nums[start] + nums[end]` 的结果，判断 `sum` 与目标 `target` 的距离，如果更近则更新结果 `ans`
+5. 同时判断 `sum` 与 `target` 的大小关系，因为数组有序，如果 `sum > target` 则 `end--`，如果 `sum < target` 则 `start++`，如果 `sum == target` 则说明距离为 0，直接返回结果
+
+```javascript
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number}
+ */
+var threeSumClosest = function(nums, target) {
+  let numSort = nums.sort((a, b) => a - b);
+  let ans = numSort[0] + numSort[1] + numSort[2];
+  for(let i=0;i<numSort.length;i++) {
+    let start = i+1, end = numSort.length - 1;
+    while(start < end) {
+      let sum = numSort[start] + numSort[end] + numSort[i];
+      if(Math.abs(target - sum) < Math.abs(target - ans))
+        ans = sum;
+      if(sum > target)
+        end--;
+      else if(sum < target)
+        start++;
+      else
+        return ans;
+    }
+  }
+  return ans;
+};
+```
+
+**复杂度分析**
+
+* 时间复杂度：O(N^2)
+* 空间复杂度：O(1)
+
 # hard
 
 
